<resources>
    <string name="app_name">SWROTT</string>
    <string name="action_fight">Fight</string>
    <string name="action_refresh">Refresh data</string>
    <string name="action_delete">Delete</string>
    <string name="action_about">About</string>
    <string name="action_add_member">Add Member</string>
    <string name="action_wiki">Wiki</string>
    <string name="action_refresh_wiki">Refresh</string>
    <string name="action_wiki_home">Home</string>
    <string name="action_edit">Edit</string>
    <string name="action_image_search">Search image</string>
    <string name="action_wookieepedia_search">Wookieepedia</string>

    <string name="dialog_spinner">Loading, may appear stuck...</string>
    <string name="dialog_no_internet">Do you want to load old data? If not, the app will quit. Try again when you have an active internet connection.</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_edit_team">Update</string>
    <string name="dialog_teamname">Team name</string>
    <string name="dialog_homeplanet">Homeplanet</string>
    <string name="dialog_maketeam_title">Make a new team</string>
    <string name="dialog_deleteteam_title">DELETE TEAM</string>
    <string name="dialog_confirm_team_deletion">Are you sure you wish to delete this team? This action can NOT be undone!</string>
    <string name="dialog_deletemember_title">DELETE MEMBER</string>
    <string name="dialog_confirm_member_deletion">Are you sure you wish to delete this team? This action can NOT be undone!</string>

    <string name="dialog_error_title">Error</string>
    <string name="dialog_error_no_internet">There is no internet.</string>
    <string name="dialog_error_no_browser">There is no browser installed or this app was forbidden from starting it.</string>
    <string name="dialog_error_should_not_happen">Something really went wrong.</string>
    <string name="dialog_error_no_members_in_team">There are no members in your team!</string>
    <string name="dialog_error_char_already_in_team">This character is already in this team.</string>


    <string name="list_team_header">Your teams</string>
    <string name="list_team_empty">No teams :(</string>

    <string name="list_member_header">Your teammembers</string>
    <string name="list_member_empty">No teammembers</string>


    <string name="splash_starwars">STAR WARS</string>
    <string name="splash_title">Return Of The Team</string>

    <string name="main_make_team">Make team</string>

    <string name="edit_team_homeplanet_text">Homeplanet</string>
    <string name="edit_team_add_member">Add member</string>

    <string name="add_member_header">Add Member</string>

    <string name="stat_header">Statistics</string>
    <string name="stat_speed">Speed</string>
    <string name="stat_attack">Attack</string>
    <string name="stat_defense">Defense</string>
    <string name="stat_hp">Healthpoints</string>
    <string name="stat_level">Level</string>
    <string name="stat_experience">Experience</string>
    <string name="stat_exp_to_level">Exp. to level</string>

    <string name="about_author">Author</string>
    <string name="about_blurb1">A long time ago in a galaxy far, far away there was an application about Star Wars. This application allows you to create a team of Star Wars characters. These characters will be attributed random stats, like attack and defense. This highly qualified and trained team needs a base of operations, obviously. That\'s why you\'ll choose a planet where your base will be located. To get around on this planet you will need a plethora of vehicles. Your team will have the choice of their vehicles. Of course, no fighting team would be complete without a starship</string>
    <string name="about_blurb2">That\'s the gist of the application. With your composed team you will be able to attack random computer enemies and level up your characters. The higher your level, the more difficult the opponent. By destroying your enemies, you\'ll get access to more planets, characters and vehicles.</string>
    <string name="about_blurb3">Become the new Empire!</string>

    <string name="fight_start_title">Who do you choose to fight with?</string>
    <string name="fight_fight">Fight</string>
    <string name="fight_vs">VS</string>

    <string name="fight_result_result">Result</string>
    <string name="fight_result_winner">Winner</string>
    <string name="fight_result_view_log">View log</string>
    <string name="title_activity_wiki">Wiki</string>

    <string name="wiki_main_people">List People</string>
    <string name="wiki_main_planets">List planets</string>
    <string name="wiki_main_species">List Species</string>

    <string name="wiki_list_people">People</string>
    <string name="wiki_list_planets">planets</string>
    <string name="wiki_list_species">Species</string>

    <string name="wiki_people_height">Height</string>
    <string name="wiki_people_mass">Mass</string>
    <string name="wiki_people_hair_color">Hair Color</string>
    <string name="wiki_people_skin_color">Skin Color</string>
    <string name="wiki_people_eye_color">Eye Color</string>
    <string name="wiki_people_birth_year">Birth Year</string>
    <string name="wiki_people_gender">Gender</string>
    <string name="wiki_people_homeworld">Homeworld</string>
    <string name="wiki_people_species">Species</string>

    <string name="wiki_planet_name">Name</string>
    <string name="wiki_planet_rotation_period">Rotation Period</string>
    <string name="wiki_planet_orbital_period">Orbital Period</string>
    <string name="wiki_planet_diameter">Diameter</string>
    <string name="wiki_planet_climate">Climate</string>
    <string name="wiki_planet_gravity">Gravity</string>
    <string name="wiki_planet_terrain">Terrain</string>
    <string name="wiki_planet_surface_water">Surface Water</string>
    <string name="wiki_planet_population">Population</string>
    <string name="wiki_planet_residents">Residents</string>

    <string name="wiki_species_name">Name</string>
    <string name="wiki_species_classification">Classification</string>
    <string name="wiki_species_designation">Designation</string>
    <string name="wiki_species_average_height">Average Height</string>
    <string name="wiki_species_skin_colors">Skin Colors</string>
    <string name="wiki_species_hair_colors">Hair Colors</string>
    <string name="wiki_species_eye_colors">Eye Colors</string>
    <string name="wiki_species_average_lifespan">Average Lifespan</string>
    <string name="wiki_species_homeworld">Homeworld</string>
    <string name="wiki_species_language">Language</string>
    <string name="wiki_species_people">People</string>
    <string name="wiki_species_unknown_planet">Unknown</string>

</resources>
