<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="be.thomasmore.swrott.MainActivity">

    <item
        android:id="@+id/action_fight"
        android:orderInCategory="1"
        android:icon="@drawable/fight_icon"
        app:showAsAction="ifRoom"
        android:title="@string/action_fight" />
    <item
        android:id="@+id/action_wiki"
        android:orderInCategory="2"
        android:icon="@drawable/wiki_icon"
        app:showAsAction="ifRoom"
        android:title="@string/action_wiki" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="3"
        app:showAsAction="never"
        android:title="@string/action_about" />
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="4"
        app:showAsAction="never"
        android:title="@string/action_refresh" />

    <!--<item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />-->
</menu>
