<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_add"
        android:orderInCategory="1"
        android:icon="@drawable/member_add_icon"
        app:showAsAction="ifRoom"
        android:title="@string/action_add_member" />
    <item
        android:id="@+id/action_fight"
        android:orderInCategory="2"
        android:icon="@drawable/fight_icon"
        app:showAsAction="ifRoom"
        android:title="@string/action_fight" />
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="3"
        android:icon="@drawable/delete_icon"
        app:showAsAction="ifRoom"
        android:title="@string/action_delete" />
</menu>
