<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/activity_wiki">

    <Button
        android:id="@+id/people"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wiki_main_people"/>

    <Button
        android:id="@+id/planets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wiki_main_planets"/>

    <Button
        android:id="@+id/species"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wiki_main_species"/>

</LinearLayout>