<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/activity_wiki">

    <LinearLayout
        android:id="@+id/header"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="LUKE SKYWALKER"
            android:textSize="@dimen/textSize"
            android:layout_marginLeft="@dimen/normal_margin"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="@dimen/normal_margin"
            android:id="@+id/name" />

        <!--Horizontal rule-->
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@color/colorHRule"
            android:layout_marginBottom="@dimen/small_margin" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1">

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wiki_people_height"
                android:textSize="@dimen/textSize"
                android:layout_marginLeft="@dimen/normal_margin"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="@dimen/normal_margin" />

            <TextView
                android:id="@+id/height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize"
                android:layout_marginLeft="@dimen/normal_margin"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="@dimen/normal_margin" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wiki_people_mass"
                android:textSize="@dimen/textSize"
                android:layout_marginLeft="@dimen/normal_margin"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="@dimen/normal_margin" />

            <TextView
                android:id="@+id/mass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize"
                android:layout_marginLeft="@dimen/normal_margin"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="@dimen/normal_margin" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wiki_people_hair_color"
                android:textSize="@dimen/textSize"
                android:layout_marginLeft="@dimen/normal_margin"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="@dimen/normal_margin" />

            <TextView
                android:id="@+id/hair"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize"
                android:layout_marginLeft="@dimen/normal_margin"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="@dimen/normal_margin" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wiki_people_skin_color"
                android:textSize="@dimen/textSize"
                android:layout_marginLeft="@dimen/normal_margin"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="@dimen/normal_margin" />

            <TextView
                android:id="@+id/skin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize"
                android:layout_marginLeft="@dimen/normal_margin"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="@dimen/normal_margin" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wiki_people_eye_color"
                android:textSize="@dimen/textSize"
                android:layout_marginLeft="@dimen/normal_margin"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="@dimen/normal_margin" />

            <TextView
                android:id="@+id/eye"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize"
                android:layout_marginLeft="@dimen/normal_margin"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="@dimen/normal_margin" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wiki_people_birth_year"
                android:textSize="@dimen/textSize"
                android:layout_marginLeft="@dimen/normal_margin"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="@dimen/normal_margin" />

            <TextView
                android:id="@+id/year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize"
                android:layout_marginLeft="@dimen/normal_margin"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="@dimen/normal_margin" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wiki_people_gender"
                android:textSize="@dimen/textSize"
                android:layout_marginLeft="@dimen/normal_margin"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="@dimen/normal_margin" />

            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize"
                android:layout_marginLeft="@dimen/normal_margin"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="@dimen/normal_margin" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wiki_people_homeworld"
                android:textSize="@dimen/textSize"
                android:layout_marginLeft="@dimen/normal_margin"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="@dimen/normal_margin" />

            <TextView
                android:id="@+id/homeworld"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize"
                android:layout_marginLeft="@dimen/normal_margin"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="@dimen/normal_margin" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/speciesHeader"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wiki_people_species"
            android:textSize="@dimen/textSize"
            android:layout_marginLeft="@dimen/normal_margin"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginBottom="2dp" />

        <!--Horizontal rule-->
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@color/colorHRule"
            android:layout_marginBottom="@dimen/small_margin" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/speciesList"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/normal_margin"
        android:layout_marginStart="@dimen/normal_margin"
        android:layout_marginRight="@dimen/normal_margin"
        android:layout_marginEnd="@dimen/normal_margin">
    </LinearLayout>

</LinearLayout>